--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
-<meta http-equiv="Cross-Origin-Embedder-Policy" content="require-corp">
+  
 
   <title>Vite + React</title>
   <link rel="stylesheet"
@@ -23,12 +22,11 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="./src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
 
 </body>
 
 </html> 
-
 
 
 
